--- a/petfax/templates/index.html
+++ b/petfax/templates/index.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetFax</title>
-</head>
-<body>
-    <h1>Welcome to PetFax</h1>
-    {%for pet in pets%}
-        <h2>{{pet.pet_name}}</h2>
-        <img src="{{pet.pet_photo}}" alt="Photo of pet" />
-    {%endfor%}
+{% extends 'layout.html' %}
+
+{% block content %}
+    <section>
+        <h1>Welcome to PetFax</h1>
+        {%for pet in pets%}
+            <a href="{{}}"><h2>{{pet.pet_name}}</h2></a>
+            <img src="{{pet.pet_photo}}" alt="Photo of pet" />
+        {%endfor%}
+    </section>
 </body>
 </html>
+{% endblock %}
